# impunity

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.md  annotated.html  api.html  contribute.html  genindex.html  how.html  impunity.code-workspace  index.html  license.txt  objects.inv  perf_improvement.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  string_annotation.html  unit_guideline.html  user_guide.html
.github/.workflows/: run-tests.yml
.github/workflows/: build-docs.yml  pypi-publish.yml  run-tests.yml
_sources/: annotated.rst.txt  api.rst.txt  contribute.rst.txt  how.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  string_annotation.rst.txt  user_guide.rst.txt
_sources/api_reference/: impunity.quantityNode.rst.txt  impunity.visitor.Visitor.rst.txt  impunity.wrapper.impunity.rst.txt
_sources/user_guide/: perf_improvement.rst.txt  unit_guideline.rst.txt
api_reference/: impunity.quantityNode.html  impunity.visitor.Visitor.html  impunity.wrapper.impunity.html
docs/: README.rst
docs/source/: api.rst  conf.py  contribute.rst  how.rst  index.rst  perf_improvement.rst  string_annotation.rst  unit_guideline.rst
docs/source/user_guide/: code_annotation.rst  decorator_guide.rst  decorator_options.rst
impunity/: Visitor.py  exception.py  wrapper.py
scripts/: plot_results.py  sample_code.py  units.cpp  units.fs  units.ml  units_fail.cpp  units_fail.fs
scripts/performance/: astropy_conv.py  astropy_noconv.py  baseline_conv.py  baseline_noconv.py  impunity_conv.py  impunity_noconv.py  numericalunits_conv.py  numericalunits_noconv.py  pint_conv.py  pint_noconv.py  quantities_conv.py  quantities_noconv.py  readme.md  running_script.py
src/impunity/: __init__.py  exception.py  quantityNode.py  visitor.py  wrapper.py
super_couscous/: QuantityNode.py  __init__.py  wrapper.py
test/: test.py  test_assignments.py  test_calculations.py  test_fonction_calls.py
tests/: explore_warnings.py  sample_module.py  test_arithmetic.py  test_assign.py  test_functions.py  test_module.py  test_wrapper.py
user_guide/: code_annotation.html  decorator_guide.html  decorator_options.html  perf_improvement.html  unit_guideline.html
