[tool.poetry]
name = "impunity"
version = "1.0.4"
description = "Static checking for consistency of physical units"
authors = [
  "Antoine Chevrot <antoine.chevrot@gmail.com>",
  "Xavier Olive <git@xoolive.org>"
]
readme = "README.md"
license = "MIT"
include = [
  "impunity.svg",
  "license.txt"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Pint = ">=0.19.2"
astor = ">=0.8.1"
typing-extensions = { version=">=4.2.0,<5.0.0", python="<3.10" }

[tool.poetry.group.dev.dependencies]
mypy = ">=0.981"
ruff = ">=0.0.253"
numpy = ">=1.23.5"
coverage = ">=7.0.0"
codecov = ">=2.1.12"
pre-commit = ">=3.3.2"
Sphinx = ">=5.1"
sphinx-design = ">=0.4.1"
sphinx-rtd-theme = ">=0.5.2"
jupyter_sphinx = ">=0.3.2"
sphinx-autodoc-typehints = ">=1.17,!=1.21.4"
ipykernel = ">=6.23.2"
pytest = ">=7.4,<9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = [
  "E", "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "NPY",  # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF"
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas"]

[tool.coverage.run]
source = ["src"]

[tool.mypy]
python_version = 3.8
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
