[project]
name = "impunity"
version = "1.0.5"
description = "Static checking for consistency of physical units"
authors = [
  { name = "Antoine Chevrot", email = "antoine.chevrot@gmail.com" },
  { name = "Xavier Olive", email = "git@xoolive.org" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["astor>=0.8.1", "pint>=0.24.4", "typing-extensions>=4.12.2"]

[dependency-groups]
dev = [
  "codecov>=2.1.13",
  "coverage>=7.6.4",
  "jupyter-sphinx>=0.5.3",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "ruff>=0.7.2",
  "sphinx>=7.4.7; python_version>'3.11'",
  "sphinx-design>=0.6.1; python_version>'3.11'",
  "sphinx-rtd-theme>=2.0.0; python_version>'3.11'",
  "sphinx-autodoc-typehints>=2.3.0; python_version>'3.11'",
  "numpy>=2.0.2; python_version<'3.10'",
  "numpy>=2.1.3; python_version>='3.10'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas"]

[tool.coverage.run]
source = ["src"]

[tool.mypy]
python_version = "3.9"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

exclude = ["scripts/*"]
